# deep-critic

./: .env_template  .gitignore  API_INTEGRATION.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  requirements.txt  theme.json
api/converters/: pdf_to_markdown.py
api/llms/: claude_client.py  mistral_client.py  openai_client.py
api/prompts/: Prompt  Prompt.py  Prompts-to-fit_neurIPS-criteria.py  prompt.py  review_prompt.py
api/routes/: reviews.py
backend/: Dockerfile  main.py  requirements.txt
backend/api/: main.py
backend/app/: config.py
backend/tests/: test_converter.py  test_parser.py  test_review_processor.py
client/src/: App.tsx
frontend/: .replit  Dockerfile  Dockerfile.dev  esbuild.server.json  package-lock.json  package.json  tsconfig.server.json
frontend/attached_assets/: Pasted--DeepCritic-App-Development-Prompt-Project-Overview-Create-an-online-application-called-DeepCri-1743029109263.txt  Pasted--DeepCritic-Frontend-Development-Prompt-Project-Overview-Create-the-frontend-for-DeepCritic-an-1743039507557.txt  compmotifs-deep-critic.txt
frontend/client/: index.html
frontend/public/: index.html
frontend/server/: db.ts  routes.ts  websocket.ts
frontend/shared/: types.ts
frontend/src/: App.js  index.js  (+2 more)
parse_output/: README.md  pyproject.toml
parse_output/outputparser/: converter.py  review_processor.py  structure.py
parse_output/outputparser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
parse_output/tests/: test_converter.py
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
(+45 files in other folders)
