[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outputparser"
version = "0.1.0"
description = "LLM feedback parser and converter for generating OpenReview-style reviews from multiple LLM agents."
readme = "README.md"
dependencies = [
  "openai>=0.27.0",
  "numpy",
  "regex"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
